Ajout parametrage taille des widgets

--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -1,4 +1,12 @@
-<div class="grid-stack-item" id="widget_{{ widget.id }}" gs-id="{{ widget.id }}">
+<div
+    class="grid-stack-item"
+    id="widget_{{ widget.id }}"
+    gs-id="{{ widget.id }}"
+    data-gs-x="{{ widget.x }}"
+    data-gs-y="{{ widget.y }}"
+    data-gs-w="{{ widget.width }}"
+    data-gs-h="{{ widget.height }}"
+>
     <div class="card border-primary grid-stack-item-content">
         <div class="card-header text-primary">
             <div class="float-start">
