--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -2,10 +2,10 @@
     class="grid-stack-item"
     id="widget_{{ widget.id }}"
     gs-id="{{ widget.id }}"
-    data-gs-x="{{ widget.x }}"
-    data-gs-y="{{ widget.y }}"
-    data-gs-w="{{ widget.width }}"
-    data-gs-h="{{ widget.height }}"
+    gs-x="{{ widget.x }}"
+    gs-y="{{ widget.y }}"
+    gs-w="{{ widget.width }}"
+    gs-h="{{ widget.height }}"
 >
     <div class="card border-primary grid-stack-item-content">
         <div class="card-header text-primary">
