--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -23,7 +23,10 @@
             <div class="float-end">
                 {% block widget_buttons %}
                     {% block widget_close_button %}
-                        <span class="widget-close" data-widgetid="{{ widget.id }}">
+                        <span
+                                id="widget_close_{{ widget.id }}"
+                                class="widget-close"
+                                data-widgetid="{{ widget.id }}">
                             <span class="fa fa-trash show-hover" title="{{ 'widget.deleteWidget'|trans(domain='LleDashboardBundle') }}"></span>
                         </span>
                     {% endblock %}
