fix: you can now use javascript inside widgets

--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -1,6 +1,11 @@
 <div
     class="grid-stack-item"
     id="widget_{{ widget.id }}"
+    gs-id="{{ widget.id }}"
+    gs-x="{{ widget.x }}"
+    gs-y="{{ widget.y }}"
+    gs-w="{{ widget.width }}"
+    gs-h="{{ widget.height }}"
 >
     <div class="card border-primary grid-stack-item-content">
         <div class="card-header text-primary">
