--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -1,79 +1,46 @@
 <div
     class="grid-stack-item"
     id="widget_{{ widget.id }}"
+    gs-id="{{ widget.id }}"
+    gs-x="{{ widget.x }}"
+    gs-y="{{ widget.y }}"
+    gs-w="{{ widget.width }}"
+    gs-h="{{ widget.height }}"
 >
     <div class="card border-primary grid-stack-item-content">
-        <div class="card-header text-primary">
-            <div class="float-start">
-                <h5 class="card-title" data-widget-title-dblclick="true">
-                    {% block widget_title %}
-                        {{ widget.title|default(widget.name|trans) }}
-                    {% endblock widget_title %}
-                    {#
-                    <span class="fa fa-pen show-hover" id="edit_{{ widget.id }}" title="{{ 'widget.editTitle'|trans(domain='LleDashboardBundle') }}"></span>
-                    #}
-                </h5>
-            </div>
-
-            <div class="float-end">
-                {% block widget_buttons %}
-                    {% block widget_close_button %}
-                        <span
-                                id="widget_close_{{ widget.id }}"
-                                class="widget-close"
-                                data-widgetid="{{ widget.id }}">
-                            <span class="fa fa-trash show-hover" title="{{ 'widget.deleteWidget'|trans(domain='LleDashboardBundle') }}"></span>
-                        </span>
-                    {% endblock %}
-                    <span class="float-end">&nbsp;&nbsp;</span>
-                    {% block widget_config_button %}
+        {% block card_header %}
+            <div class="card-header text-primary">
+                <div class="float-start">
+                    <h5 class="card-title" data-widget-title-dblclick="true">
+                        {% block widget_title %}
+                            {{ widget.title | default(widget.name | trans) }}
+                        {% endblock widget_title %}
                         {#
-                        <span class="fa fa-cog widget-config show-hover" id="config_{{ widget.id }}" title="{{ 'widget.configWidget'|trans(domain='LleDashboardBundle') ~ ' "' ~ widget.name|trans ~ '"' }}"></span>
+                        <span class="fa fa-pen show-hover" id="edit_{{ widget.id }}" title="{{ 'widget.editTitle'|trans(domain='LleDashboardBundle') }}"></span>
                         #}
-                    {% endblock %}
-                {% endblock widget_buttons %}
-            </div>
-        </div>
+                    </h5>
+                </div>
 
-        <div class="card-body">
-            {% block widget_body %}{% endblock widget_body %}
-        </div>
+                <div class="float-end">
+                    {% block widget_buttons %}
+                        {{ include('@LleDashboard/widget/includes/_buttons.html.twig') }}
+                    {% endblock widget_buttons %}
+                </div>
+            </div>
+        {% endblock card_header %}
+
+        {% block card_body %}
+            <div class="card-body">
+                {% block widget_body %}{% endblock widget_body %}
+            </div>
+        {% endblock card_body %}
 
         {% block widget_config %}
-            <div id="form_{{ widget.id }}" style="display: none;" class="card-body">
-                {# CONFIGURATION FORM #}
-                {% if form is defined and form %}
-                    {% form_theme form '@LleDashboard/form/widgets.html.twig' %}
-                    {% set id = 'form_' ~ widget.id %}
-                    {{ form_start(form, {'action': path('widget_save_config', parameters = {id: widget.id}), 'method': 'POST'}) }}
-                    {{ form_widget(form.Configuration, { 'id': id }) }}
-                    {{ form_rest(form) }}
-                    {# SUBMIT BUTTON #}
-                    <button id="submit_{{ widget.id }}" class="btn btn-primary" type="submit">
-                        {{ 'widget.saveConfig'|trans(domain='LleDashboardBundle') }}
-                    </button>
-                    {# RESET CONFIG BUTTON #}
-                    <a class="btn btn-default" href="{{ path('widget_reset_config', { id: widget.id }) }}">
-                        {{ 'widget.defaultConfig'|trans(domain='LleDashboardBundle') }}
-                    </a>
-                    {{ form_end(form) }}
-                    <script>
-                        {# Save config in a field with the correct data [ Symfony is screwing up some field values ] #}
-                        window.editor{{ id }}.on("change", function () {
-                            $("#form_json_{{ id }}").val(JSON.stringify(window.editor{{ id }}.getValue()));
-                        });
-                    </script>
-                {% else %}
-                    {# RESET CONFIG BUTTON #}
-                    <a class="btn btn-default" href="{{ path('widget_reset_config', { id: widget.id }) }}">
-                        {{ 'widget.defaultConfig'|trans(domain='LleDashboardBundle') }}
-                    </a>
-                {% endif %}
-            </div>
+            {{ include('@LleDashboard/widget/includes/_config.html.twig') }}
         {% endblock widget_config %}
 
-        {% block widget_footer %}
+        {% block card_footer %}
             {# <div class="card-footer"></div> #}
-        {% endblock widget_footer %}
+        {% endblock card_footer %}
     </div>
 </div>
