fix: fixed javascript errors

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -38,7 +38,7 @@
     height: 80%;
 }
 .dashboard-widget-post-it textarea, .dashboard-widget-post-it textarea:focus {
-    font-family: "Comic Sans MS", "Indie Flower";
+    font-family: "Comic Sans MS", "Indie Flower", sans-serif;
     background-color: #FCFCAA;
     height: 100%;
     width: 100%;
