--- a/src/Resources/views/widget/includes/_buttons.html.twig
+++ b/src/Resources/views/widget/includes/_buttons.html.twig
@@ -1,5 +1,5 @@
 {% block widget_export_button %}
-    {% if exportable is defined and exportable %}
+    {% if exportable is not defined or (exportable is defined and exportable) %}
         <span
                 class="lle-dashboard-widget-export far fa-file show-hover"
                 data-export="widget_{{ widget.id }}"
