Widget : implement AJAX support 2le/crudit#209

--- a/src/Resources/views/widget/base_widget.html.twig
+++ b/src/Resources/views/widget/base_widget.html.twig
@@ -6,6 +6,7 @@
     gs-y="{{ widget.y }}"
     gs-w="{{ widget.width }}"
     gs-h="{{ widget.height }}"
+    data-ajax="{{ widget.supportsAjax }}"
 >
     <div class="card {% block widget_class %}{% endblock%} border-primary grid-stack-item-content">
         {% block card_header %}
